<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reset">AC</string>
    <string name="zhenfu">+/-</string>
    <string name="baifenzhi">%</string>
    <string name="chuyi">÷</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dian">.</string>
    <string name="dengyu">=</string>
    <string name="jia">+</string>
    <string name="jian">-</string>
    <string name="cheng">×</string>
    <string name="change">⇌</string>
    
    <string name="zuokuohao">(</string>
    <string name="youkuohao">)</string>
    <string name="mc">mc</string>
    <string name="mplus">m+</string>
    <string name="mcost">m-</string>
    <string name="mr">mr</string>
   
    <string name="ln">ln</string>

     <string name="xI">x!</string>
     <string name="sin">sin</string> 
     <string name="cos">cos</string> 
     <string name="tan">tan</string> 
     <string name="e">e</string> 
     <string name="EE">EE</string>
     <string name="Rad">Rad</string> 
     <string name="sinh">sinh</string> 
     <string name="cosh">cosh</string> 
     <string name="tanh">tanh</string> 

     <string name="Rand">Rand</string> 
     <string name="pai">π</string> 
     <string name="log10">lgX</string>
     <string name="x2">x²</string>
     <string name="x3">x³</string>
     <string name="xy">x^y</string>
     <string name="ex">e^x</string>
     <string name="ygenhaox">y√x</string>
     
     <drawable name="button_n">#C1C1C1</drawable>
     <drawable name="button_p">#949494</drawable>
     
</resources>
