<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:background="#666"
        android:gravity="center_vertical|right"
        android:text=" "
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:maxLines="2" 
        android:textSize="15dp" />

     <EditText
         android:id="@+id/editText1"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:layout_alignLeft="@+id/button17"
         android:layout_below="@+id/textView1"
         android:layout_weight="1.36"
         android:background="#666"
         android:editable="false"
         android:text=""
         android:textSize="45dp" 
         android:maxLines="2" 
         android:gravity="center_vertical|right"
         android:textColor="#000"
         />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" >

        <Button
            android:id="@+id/button19"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/reset"
           />

        <Button
            android:id="@+id/button18"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/zhenfu" />

        <Button
            android:id="@+id/button20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/baifenzhi" />

        <Button
            android:id="@+id/button14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle2"
            android:text="@string/chuyi" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" >

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/seven" />

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/eight" />

        <Button
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/nine" />

        <Button
            android:id="@+id/button15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle2"
            android:text="@string/cheng" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" >

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/four" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/five" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/six" />

        <Button
            android:id="@+id/button16"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle2"
            android:text="@string/jian" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/one" 
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/two" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/three" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle2"
            android:text="@string/jia" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1">

        <Button
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/buttonstyle3"
            android:text="@string/zero" />

        <Button
            android:id="@+id/button13"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle3"
            android:text="@string/dian" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle2"
            android:text="@string/dengyu" />
    </TableRow>
    
    

</TableLayout>
